Formulaire controle des input (html/css) controle pattern => input rouge quand invalide

--- a/css/cssGeneral.css
+++ b/css/cssGeneral.css
@@ -174,3 +174,9 @@ td.libre
     width:30px;
     text-align:center;
 }
+
+/* Formulaire invalide /!\ changer le fichier */
+input:invalid 
+{
+    color:red;
+}
