--- a/css/css_GestionEtablissements.css
+++ b/css/css_GestionEtablissements.css
@@ -16,7 +16,7 @@ CreerModifierEtablissement
 }
 
 .BtnValidReturn input{
-    margin: 15px 10px 15px 10px;
+    margin: 10px 10px ;
 }
 
 #BtnRight{
