--- a/css/css_GestionTypesChambres.css
+++ b/css/css_GestionTypesChambres.css
@@ -2,7 +2,21 @@
     Created on : 1 mai 2019, 18:51:53
     Author     : Daumas hugo
 */
+
+/*
+CreerModifierTypeChambre
+*/
 #TabCreerModifierTypeChambre.tabNonQuadrille{
     width:40%;
 }
+
+/*
+ObtenirTypeChambres
+*/
+#TabObtenirTypechambres.tabNonQuadrille{
+    width:40%;
+}
+/*
+SupprimerTypeChambre
+*/
 
