--- a/css/cssFormulaire.css
+++ b/css/cssFormulaire.css
@@ -3,3 +3,15 @@
     Author     : Mathieu CANTOGREL
 */
 
+/* input en rouge quand la saisie est invalide */
+input:invalid 
+{
+    color:red;
+}
+
+/* message d'erreur a droite des input */
+form div{
+    display: inline-block;
+    color: red;
+    margin-left: 1%;
+}
