[Front]Barre de navigation css pt.2

--- a/css/cssGeneral.css
+++ b/css/cssGeneral.css
@@ -13,11 +13,25 @@ body{
 /* Style de base pour la page (couleur fond : ocre, couleur texte : noir) */
 .basePage 
 {
-    background-color:#FFDD88;
+    background-color:whitesmoke;
     color:black;
     font:11px Arial, Helvetica, sans-serif;
 }
 
+/*Style pour afficher tout les tableaux au millieu de la page (On vient
+stylisé a part la page d'accueil')*/
+.basePage *{
+    margin:0 auto;
+    text-align: center;
+}
+
+td.basePage{
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.TabOnglet{
+    margin: 10px;
+}
 /* Style pour le titre (couleur du texte : rouge) */
 .titre 
 {
@@ -197,34 +211,12 @@ td.libre
     padding: 9px;
 }
 
-#TabTitreMenu{
+img{
     width: 100%;
-    
-}
-
-#banniere{
-    text-align: left;
-    background-image: url('../images/banniere.jpg');
-    position: relative;
-    zoom: 1;
-    width: 100% !important;
-    height: 150px;
-    z-index: 5;
-    padding: 100px 0 100px;
-}
-
-#banniere-inside{
-    width: 960px;
-    margin: 0 15%;
-    position: relative;
-    overflow: hidden;
-}
-
-#banniere-inside h1{
-    font:52px proxima,Helvetica;
-    font-weight: bold;
+    display: flex;
 }
 
 .TabOnglet{
     width: 100% !important;
 }
+
