--- a/css/cssGeneral.css
+++ b/css/cssGeneral.css
@@ -35,7 +35,6 @@ td.basePage{
 /* Style pour le titre (couleur du texte : rouge) */
 .titre 
 {
-    background-color:#FFDD88;
     color:#F50033;
     font:30px Arial, Helvetica, sans-serif;
     text-align:center;
@@ -51,7 +50,6 @@ td.basePage{
 mise en gras et en italique) */
 .texteAccueil
 {
-    background-color:#FFDD88;
     color:black;       
     font:14px Proxima, "Times New Roman", Times, serif;
     font-weight: bold;
@@ -220,3 +218,9 @@ img{
     width: 100% !important;
 }
 
+.tabNonQuadrille *{
+    font-size: 15px;
+}
+.tabQuadrille *{
+    font-size: 15px;
+}
